# ot-harjoitusty-

./: README.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/src/: index.py
laskarit/viikko2/unicafe/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
