[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["Maija <maija.rislakki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
